# daily_game

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
include/: events.hpp  game.hpp  game_metadata.hpp  input_handler.hpp  player.hpp  renderer.hpp  scoreboard.hpp  storage.hpp  ui_factory.hpp
src/: main.cpp
src/core/: input_handler.cpp  player.cpp  renderer.cpp  scoreboard.cpp  storage.cpp  ui_factory.cpp
src/games/guess_number/: guess_number.cpp  guess_number.hpp
src/games/rock_papr_sisr/: rock_papr_sisr.cpp  rock_papr_sisr.hpp
src/games/snake/: snake.hpp
